# rust-raspberrypi-4-os

./: .gitignore  Cargo.toml  Taskfile.yml  help.txt  image_with_chainloader.img  kernel8.img  rust-analyzer.toml  rust-gdb-multiarch
.cargo/: config.toml
src/: arch_boot.rs  driver.rs  main.rs  panic_wait.rs  print.rs  synchronization.rs
src/_arch/aarch64/: exception.rs  time.rs
src/_arch/aarch64/cpu/: boot.rs  boot.s
src/_arch/aarch64/memory/: mmu.rs
src/_arch/aarch64/memory/mmu/: translation_table.rs
src/boot/: mod.rs
src/bsp/: device_driver.rs  mod.rs  raspberrypi.rs
src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs
src/bsp/raspberrypi/: console.rs  driver.rs  memory.rs
src/bsp/raspberrypi/memory/: mmu.rs
src/console/: mod.rs
src/cpu/: mod.rs
src/exception/: mod.rs
src/memory/: mmu.rs
