[package]
name = "serge_os"
version = "0.1.0"
edition = "2024"

[dependencies]
# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { version = "10.0.0" }
tock-registers = { version = "0.9.x", default-features = false, features = [
    "register_types",
], optional = true }
ansi_rgb = { version = "0.2.0" }

[features]
default = ["tock-registers"]
bsp_rpi3 = []
bsp_rpi4 = []

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

[profile.release-with-debug]
inherits = "release"
debug = true
opt-level = 0


[lints.rust]

[lints.clippy]
# You forgot a `todo!()`!
todo = "forbid"
# This can only happen by mistake in Rustlings.
empty_loop = "forbid"
# No infinite loops are needed in Rustlings.
infinite_loop = "deny"
# You shouldn't leak memory while still learning Rust!
mem_forget = "deny"
# Currently, there are no disallowed methods. This line avoids problems when developing Rustlings.
disallowed_methods = "allow"
